--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
             crossorigin="anonymous" referrerpolicy="no-referrer" /> <script
             src="words.js"></script>
         <script src="extentions.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>TypeFast</title>
     </head>
     <body>
-        <div class="typingArea" style="display: none;">
+        <div class="typingArea">
             <div class="words" id="words"></div>
-            <input autofocus placeholder="Type here..." type="text"
+            <div>
+                <input autofocus placeholder="Type here..." type="text"
                 class="inputBox" id="inputBox">
+                <button id="newtest">New Test</button>
+            </div>
         </div>
         <div class="result" style="display: flex;">
             <div class="wpm">
@@ -32,14 +35,8 @@
                 <div class="unit">WPM</div>
             </div>
             <div class="stats">
-                <div class="row">
-                    <div class="col">Accuracy</div>
-                    <div class="col">Raw WPM</div>
-                </div>
-                <div class="row">
-                    <div class="col">98%</div>
-                    <div class="col">16</div>
-                </div class="row">
+                <div>Accuracy: 98%</div>
+                <div>Raw WPM: 82</div>
             </div>
         </div>
         <button id="playaudio">
