--- a/index.html
+++ b/index.html
@@ -21,27 +21,12 @@
         <title>TypeFast</title>
     </head>
     <body>
-        <div class="typingArea" style="display: none;">
+        <div class="typingArea">
             <div class="words" id="words"></div>
             <input autofocus placeholder="Type here..." type="text"
                 class="inputBox" id="inputBox">
         </div>
-        <div class="result" style="display: flex;">
-            <div class="wpm">
-                <div class="num">80</div>
-                <div class="unit">WPM</div>
-            </div>
-            <div class="stats">
-                <div class="row">
-                    <div class="col">Accuracy</div>
-                    <div class="col">Raw WPM</div>
-                </div>
-                <div class="row">
-                    <div class="col">98%</div>
-                    <div class="col">16</div>
-                </div class="row">
-            </div>
-        </div>
+        <div class="result" style="display: none;"> </div>
         <button id="playaudio">
             <i class="fa-solid fa-volume-high"></i>
         </button>
