Made iput better

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <div class="typingArea">
             <div class="words" id="words"></div>
-            <input autofocus placeholder="Type here..." type="text"
+            <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus placeholder="Type here..." type="text"
                 class="inputBox" id="inputBox">
         </div>
         <div class="result" style="display: none;"> </div>
