IDK what i did...

--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <body>
         <div class="typingArea">
             <div class="words" id="words"></div>
-            <input autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" autofocus placeholder="Type here..." type="text"
-                class="inputBox" id="inputBox">
+            <div class="inputRow">
+                <input autocomplete="off" autocorrect="off" autocapitalize="off"
+                    spellcheck="false" autofocus placeholder="Type here..."
+                    type="text"
+                    class="inputBox" id="inputBox">
                 <button id="newtest">New Test</button>
             </div>
         </div>
