--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     </head>
     <body>
         <div class="typingArea">
+            <div class="stats">
+                <div class="wpm">
+                    <span class="num">34</span>
+                    <span>WPM</span>
+                </div>
+            </div>
             <div class="words" id="words"></div>
             <div class="inputRow">
                 <input autocomplete="off" autocorrect="off" autocapitalize="off"
