--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <body>
         <div class="typingArea">
             <div class="stats">
-                <div class="wpm">
-                    <span class="num">34</span>
-                    <span>WPM</span>
+                <div class="stat wpm">
+                    34 WPM
+                </div> 
+                <div class="stat acc">
+                    89% Accuracy
                 </div>
             </div>
             <div class="words" id="words"></div>
