--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         <div class="typingArea">
             <div class="stats">
                 <div class="stat wpm">
-                    34 WPM
+                    ? WPM
                 </div> 
                 <div class="stat acc">
-                    89% Accuracy
+                    ? Accuracy
                 </div>
             </div>
             <div class="words" id="words"></div>
