--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             src="words.js"></script>
         <script src="extentions.js"></script>
         <link rel="stylesheet" href="css/style.css">
-        <title>TypeFast</title>
+        <link rel="icon" type="image/x-icon" href="icon.png">
+        <title>KeyPro</title>
     </head>
     <body>
         <div class="typingArea">
