--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     spellcheck="false" autofocus placeholder="Type here..."
                     type="text"
                     class="inputBox" id="inputBox">
-                <button id="newtest">New Test</button>
+                <button tabindex="0" title="Tab+Enter" id="newtest">New Test</button>
             </div>
         </div>
         <div class="result" style="display: none;"> </div>
