--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
     </head>
     <body>
         <div class="typingArea">
-            <div class="stats">
-                <div class="stat wpm">
-                    ? WPM
-                </div> 
-                <div class="stat acc">
-                    ? Accuracy
+            <div class="top">
+                <div class="stats">
+                    <div class="stat wpm">
+                        ? WPM
+                    </div> 
+                    <div class="stat acc">
+                        ? Accuracy
+                    </div>
+                </div>
+                <div class="new">
+                    <span class="title">new test:</span>
+                    <span class="wordCount">10</span>
+                    <span class="wordCount">20</span>
+                    <span class="wordCount">50</span>
                 </div>
             </div>
             <div class="words" id="words"></div>
