Added words options

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
                 <div class="new">
                     <span class="title">new test:</span>
-                    <span class="wordCount">10</span>
-                    <span class="wordCount">20</span>
-                    <span class="wordCount">50</span>
+                    <a class="wordCount" href="?w=10">10</a>
+                    <a class="wordCount" href="?w=20">20</a>
+                    <a class="wordCount" href="?w=50">50</a>
                 </div>
             </div>
             <div class="words" id="words"></div>
