--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
                         ? WPM
                     </div> 
                     <div class="stat acc">
-                        ? Accuracy
+                        ? accuracy
                     </div>
                 </div>
                 <div class="new">
                     <span class="title">new test:</span>
                     <a class="wordCount" href="?w=10">10</a>
+                    <a class="wordCount" href="?w=15">15</a>
                     <a class="wordCount" href="?w=20">20</a>
                     <a class="wordCount" href="?w=50">50</a>
                 </div>
@@ -45,7 +46,7 @@
                     spellcheck="false" autofocus placeholder="Type here..."
                     type="text"
                     class="inputBox" id="inputBox">
-                <button tabindex="0" title="Tab+Enter" id="newtest">New Test</button>
+                <button tabindex="0" title="Tab+Enter" id="newtest">restart</button>
             </div>
         </div>
         <div class="result" style="display: none;"> </div>
